<resources>
    <string name="app_name">Kinematics</string>
    <string name="start">go</string>
    <string name="welcome_message">To begin, choose what type of calculation you want to do.</string>
    <string name="inital_velocity_vo">initial velocity (vo)</string>
    <string name="final_velocity_v">final velocity (v)</string>
    <string name="acceleration_a">acceleration (a)</string>
    <string name="time_t">time (t)</string>
    <string name="displacement_x">displacement (x)</string>
    <string name="select_variables">Which values do you already know?</string>
    <string name="next">next</string>
    <string name="title_activity_output">OutputActivity</string>
    <string name="restart">restart</string>
    <string name="answers">Answers</string>
    <string name="magnitude">magnitude</string>
    <string name="angle">angle</string>

    <string-array name="calculation_type_array">
        <item>1D Kinematics</item>
        <item>2D Kinematics - enter vectors</item>
        <item>2D Kinematics - enter x and y coordinates</item>
    </string-array>
</resources>
