<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.android.kinematicscalculator.DetermineRelevantVariablesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_variables"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <CheckBox android:id="@+id/vo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inital_velocity_vo"/>
    <CheckBox android:id="@+id/v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_velocity_v"/>
    <CheckBox android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acceleration_a"/>
    <CheckBox android:id="@+id/t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_t"/>
    <CheckBox android:id="@+id/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/displacement_x"/>

    <Button
        android:id="@+id/nextRelevantVariablesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"/>

</LinearLayout>
