<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.android.kinematicscalculator.InputActivity">

    <TextView
        android:id="@+id/enterValueTextViewAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/inputBoxMagnitude"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/magnitude"/>

    <EditText
        android:id="@+id/inputAngleBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/angle"/>

    <Button
        android:id="@+id/nextInputButtonAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"/>

</LinearLayout>
